[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vizent"
version = "1.1.1"
authors = [
    {name = "Peter Baudains", email="peter.baudains@kcl.ac.uk"},
    {name = "Lucy McLaughlin", email="lucy.mclaughlin@ncl.ac.uk"}
]
description = "A python library for visualising bivariate data using glyphs and node-link diagrams with matplotlib."
readme = "README.md"
keywords = ["visualization", "plot", "bivariate", "glyphs", "scatterplot", "dataviz", "networks", "uncertainty"]
license={"file" = "LICENSE.txt"}
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Visualization',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dependencies = ["matplotlib", "numpy", "scipy"]

[project.optional-dependencies]
background_map = ["cartopy"]
background_image = ["pillow"] 

[options]
packages = ["vizent", "vizent.images"]
